bk_ida/gccida/c2/build_index_type
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_index_type/src/tree.c:4282:28: error: use of undeclared identifier 'tree_int_cst'
node->int_cst.int_cst = *( tree_int_cst::$A887AD9C3C6C8CC7716950D571F57C9D *)&v4->block.vars; 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/build_index_type/src/obj/tree.o] Error 1
